--- a/style.css
+++ b/style.css
@@ -73,20 +73,24 @@ html,body{
 .home{
     width:100%;
     height: 100%;
-     background-image: url('right-angle-frame-abstract-background-arrowhead-black-vector.jpg');
+     background-image: url('back.jpg');
      background-size: 100% 100%;
    
+     display: flex;
+     align-items: center;
+     justify-content: center;
 }
 .home img{
     width:400px;
     height:400px;
     border-radius: 50%;
+
 }
 ::-webkit-scrollbar{
     width:0;
 }
 .name__role{
-    width:100%;
+    width:80%;
     
 }
 .name__role p{
@@ -94,12 +98,9 @@ html,body{
     font-size:40px;
 }
 .name__role h1{
-   color: #000000;
-    -webkit-text-stroke:1px rgb(181, 181, 181);
+   color: #ffffff;
     font-size:100px;
     letter-spacing:5px;
-    
-    
 }
 
 .about{
@@ -135,7 +136,7 @@ html,body{
 }
 .Details{
     width:80%;
-    height:60%;
+    height:50%;
     display: flex;
     align-items: center;
     justify-content: space-around;
@@ -143,7 +144,7 @@ html,body{
 }
 .Details img{
     width:500px;
-    height:500px;
+    height:450px;
     border-radius: 20px;
 }
 .text__details{
