--- a/style.css
+++ b/style.css
@@ -467,3 +467,116 @@ textarea:focus{
 }
 
 
+
+
+.project__filter__parent{
+    width:100%;
+    height:100%;
+    display: flex;
+ 
+   background-color: #fff;
+   flex-direction: column;
+   align-items: center;
+   justify-content: space-around;
+}
+.project__filter__parent h1{
+font-size:60px;
+}
+.query__parent{
+    width:80%;
+    height:7%;
+   cursor: pointer;
+    border-radius: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+   
+}
+.query__parent span{
+   
+    padding:16px;
+    border-radius: 10px;
+    font-size: 30px;
+    color:rgb(0, 0, 0);
+    border: 2px solid black;
+
+   
+}
+
+
+
+.divArea{
+    width:80%;
+    height:60%;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+   
+}
+
+.project__temPlate{
+    width:350px;
+    height:300px;
+    /* background-image: url('colorhunt.jpg'); */
+    border-radius: 10px;
+    background-size: 100% 100%;
+}
+.dropdown{
+    width:100%;
+    height:100%;
+    border-radius: 10px;
+    display: none;
+    background: linear-gradient(189deg, rgba(136,136,136,0.8) 38%, rgb(130, 130, 130,0.5) 100%);
+    cursor: pointer;
+   
+    
+}
+.project__temPlate:hover  .dropdown {
+   display: block;
+  
+}
+.drop{
+    width:100%;
+    height:100%;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    flex-direction: column;
+}
+.drop h2{
+    color:black;
+    font-size: larger;
+}
+
+
+
+.button-66 {
+  background-color: #000000;
+  border-radius: 4px;
+  border: 0;
+  box-shadow: rgba(1,60,136,.5) 0 -1px 3px 0 inset,rgba(255, 255, 255, 0.1) 0 3px 6px 0;
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  display: inherit;
+  font-family: "Space Grotesk",-apple-system,system-ui,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 24px;
+  margin: 0;
+  padding: 16px 20px;
+  position: relative;
+  text-align: center;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  vertical-align: baseline;
+  transition: all .2s cubic-bezier(.22, .61, .36, 1);
+}
+
+.button-66:hover {
+  background-color: #323232;
+  transform: translateY(-2px);
+}
+
