--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ html,body{
 .home{
     width:100%;
     height: 100%;
-     background-image: url('back.jpg');
+     background-image: url('header.jpg');
      background-size: 100% 100%;
    
      display: flex;
