--- a/style.css
+++ b/style.css
@@ -52,20 +52,17 @@ html,body{
 }
 
 .btn {
-      cursor: pointer;
-        display: inline-block;
-        font-weight: 400;
-        color: #ffffff;
-        text-align: center;
-        vertical-align: middle;
-        user-select: none;
-        background-color: transparent;
-        border: 1px solid transparent;
-        padding:5px 25px;
-        border-radius: 100px;  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-        color: #000000;
-      background: #fff;
-        font-size: 25px;
+    border-width: 2px;
+    font-weight: 400;
+    font-size: .8571em;
+    line-height: 1.35em;
+    margin: 10px 5px;
+    border: none;
+    border-radius: 0.1875rem;
+    padding: 11px 22px;
+    cursor: pointer;
+    background-color: #888;
+    color: #fff;
 }
 .btn:hover{
     background-color: #000000;
@@ -305,34 +302,41 @@ transform: translate3d(0px, 0px, 0px);
    
 }
 .Tech{
-    width:400px;
+    width:500px;
    
    display: flex;
    flex-wrap: wrap;
-   justify-content: space-around;
+   /* justify-content: space-around; */
 
 }
 .Tech span{
-    color:rgb(255, 255, 255);
-    background-color: #000000;
-    padding: 10px;
-    height: 20px;
-    font-size: 18px;
-    border-radius: 5px;
-
-}
-.inBox button{
-    width:180px;
-    height:60px;
-    background: none;
+    border-width: 2px;
+    font-weight: 400;
+    font-size: .8571em;
+    line-height: 1.35em;
+    margin: 10px 5px;
     border: none;
-    font-family: sans-serif;
-    font-size: 20px;
-    color:rgb(221, 221, 221);
-    border-radius: 10px;
-    margin-top: 100px;
+    border-radius: 0.1875rem;
+    padding: 11px 22px;
     cursor: pointer;
-    background: #252525;
+    background-color: #888;
+    color: #fff;
+}
+
+
+.inBox button{
+    border-width: 2px;
+    font-weight: 400;
+    font-size: .8571em;
+    line-height: 1.35em;
+    margin: 10px 5px;
+    border: none;
+    border-radius: 0.1875rem;
+    padding: 11px 22px;
+    cursor: pointer;
+    background-color: #696969;
+    color: #fff;
+    margin-top: 100px;
 
 
 }
@@ -509,17 +513,24 @@ font-size:60px;
 }
 .fil{
    
-    padding:16px;
-    border-radius: 10px;
-    font-size: 30px;
-    color:rgb(0, 0, 0);
+    border-width: 2px;
+    font-weight: 400;
+    font-size: .8571em;
+    line-height: 1.35em;
+    margin: 10px 5px;
+    border: none;
+    border-radius: 0.1875rem;
+    padding: 11px 22px;
+    cursor: pointer;
+    background-color: #787878;
+    color: #fff;
   
 
    
 }
 
 .fil:hover{
-    border: 2px solid black;
+    border: 1px solid black;
 }
 .fil2{
    
@@ -579,27 +590,17 @@ font-size:60px;
 
 
 .button-66 {
-  background-color: #000000;
-  border-radius: 4px;
-  border: 0;
-  box-shadow: rgba(1,60,136,.5) 0 -1px 3px 0 inset,rgba(255, 255, 255, 0.1) 0 3px 6px 0;
-  box-sizing: border-box;
-  color: #fff;
-  cursor: pointer;
-  display: inherit;
-  font-family: "Space Grotesk",-apple-system,system-ui,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
-  font-size: 18px;
-  font-weight: 700;
-  line-height: 24px;
-  margin: 0;
-  padding: 16px 20px;
-  position: relative;
-  text-align: center;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-  vertical-align: baseline;
-  transition: all .2s cubic-bezier(.22, .61, .36, 1);
+    border-width: 2px;
+    font-weight: 400;
+    font-size: .8571em;
+    line-height: 1.35em;
+    margin: 10px 5px;
+    border: none;
+    border-radius: 0.1875rem;
+    padding: 11px 22px;
+    cursor: pointer;
+    background-color: #000000;
+    color: #fff;
 }
 
 .button-66:hover {
